Optimized Clases to use modularity and improved exception handling