@@ -8,18 +8,19 @@ import java.net.URL;
 
 public class GeoCoding {
 
-    private String baseURL_reverse = "http://api.openweathermap.org/geo/1.0/reverse?";
-    private String baseURL_direct = "http://api.openweathermap.org/geo/1.0/direct?";
-    public String reverseGeoCoding(double latitude, double longitude){
+    private String baseReverseURL = "http://api.openweathermap.org/geo/1.0/reverse?";
+    private String baseDirectURL = "http://api.openweathermap.org/geo/1.0/direct?";
+    private String apiKey = "ace110a273e85c2a8eb1414bf74153f9";
 
-        String msg = "";
 
+    private String buildURL(String baseURL, double latitude, double longitude) {
+        return baseURL + "lat=" + latitude + "&lon=" + longitude + "&appid=" + apiKey;
+    }
+
+    private String fetchData(String urlString) throws Exception{
         try {
-            // Construct URI with latitude, longitude, and API key
-            URI uri = new URI(baseURL_reverse + "lat=" + latitude + "&lon=" + longitude + "&limit=1&appid=ace110a273e85c2a8eb1414bf74153f9");
-
-            // Create URL object from URI
-            URL url = uri.toURL();
+            // Create URL object from urlString
+            URL url = new URL(urlString);
 
             // Open connection
             HttpURLConnection connection = (HttpURLConnection) url.openConnection();
@@ -43,47 +44,19 @@ public class GeoCoding {
 
             return responseBuilder.toString();
         } catch (Exception e) {
-            e.printStackTrace();
-            return "Error";
+            throw e;
         }
+    }
+
+    public String reverseGeoCoding(double latitude, double longitude) throws Exception{
+
+            return fetchData(baseReverseURL + "lat=" + latitude + "&lon=" + longitude + "&limit=1&appid=" + apiKey);
 
     }
-    public String directGeoCoding(String location)
+    public String directGeoCoding(String location) throws Exception
     {
-        String msg = "";
 
-        try {
-            // Construct URI with latitude, longitude, and API key
-            URI uri = new URI(baseURL_direct + "q=" + location + "&appid=ace110a273e85c2a8eb1414bf74153f9");
-
-            // Create URL object from URI
-            URL url = uri.toURL();
-
-            // Open connection
-            HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-
-            // Set request method
-            connection.setRequestMethod("GET");
-
-            // Get input stream
-            BufferedReader reader = new BufferedReader(new InputStreamReader(connection.getInputStream()));
-
-            // Read response into StringBuilder
-            StringBuilder responseBuilder = new StringBuilder();
-            String line;
-            while ((line = reader.readLine()) != null) {
-                responseBuilder.append(line);
-            }
-            reader.close();
-
-            // Close connection
-            connection.disconnect();
-
-            return responseBuilder.toString();
-        } catch (Exception e) {
-            e.printStackTrace();
-            return null;
-        }
+            return fetchData(baseDirectURL + "q=" + location + "&appid=" + apiKey);
 
     }
 
